--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 doctype html
 html
   include tpl/head
-  body.container-fluid.no-gutters.bg-dark
+  body.container-fluid.no-gutters
     div.row.h-100
       //- Header
       header.col-12.d-flex.flex-row.justify-content-start.align-items-center.bg-dark.text-light.px-0.py-1.m-0
