--- a/public/stylesheets/bootstrap/_variables.scss
+++ b/public/stylesheets/bootstrap/_variables.scss
@@ -44,7 +44,7 @@ $ffxiv-custom-colors: (
 
 // Body
 // $body-bg:#343a40; // $dark
-$body-bg: rgba(0,0,0,0);
+$body-bg: rgba(0,0,0,.4);
 
 // Base Bootstrap
 @import '../../../node_modules/bootstrap/scss/variables';
