--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -55,11 +55,24 @@ scrollbar, ::-webkit-scrollbar {
 // -- Elements
 
 html, body {
+    background-color:transparent;
     width:100%;
     height:100%;
     overflow:hidden;
     font-family:'Roboto Condensed';
+    font-size:14px;
     white-space:nowrap;
+}
+
+body {
+    &.debug {
+        background: rgba(0,0,0,.4);
+    }
+
+    &.resize {
+        background:url('../images/drag.png') rgba(0,0,0,.4) bottom right no-repeat;
+        box-sizing:border-box;
+    }
 }
 
 button, a {
@@ -105,9 +118,11 @@ img {
 }
 
 header {
-    border-bottom: 2px solid $gray-500;
-    box-sizing: content-box;
+    background:rgba(0,0,0,.8);
+    border-bottom:2px solid $gray-500;
+    box-sizing:content-box;
     font-size:1.4rem;
+    line-height:$header-height;
     height:$header-height;
     overflow:hidden;
 
@@ -124,7 +139,7 @@ header {
 
     .encounter-time {
         font-family:'DS Digital';
-        font-size:2.0rem;
+        font-size:2.1rem;
     }
 
     .encounter-category {
@@ -145,27 +160,33 @@ header {
         }
     }
 
-    &:hover {
-        .encounter-views {
-            display:inherit;
-        }
+    // &:hover {
+    //     .encounter-views {
+    //         display:inherit;
+    //     }
 
-        .encounter-totals {
-            display:none;
-        }
-    }
+    //     .encounter-totals {
+    //         display:none;
+    //     }
+    // }
+}
+
+.text-shadow {
+    text-shadow:$text-shadow;
 }
 
 .tab-content {
-    height: calc(100% - #{$header-height});
+    height:calc(100% - #{$header-height} - 9px); // - Padding
     overflow-y:scroll;
 
     .tab-pane {
         .title {
             background:rgba(0,0,0,.4);
-            // display:none !important;
-            height:$entry-height;
-            line-height:$entry-height;
+            border-bottom:2px solid $gray-500;
+            border-top:2px solid $gray-500;
+            height:$entry-height + 10;  // - Padding
+            line-height:$entry-height + 10; // - Padding
+            font-size:1.2rem;
 
             .encounter-rhps, .encounter-rtps {
                 font-size:1.4rem;
@@ -190,20 +211,16 @@ header {
     }
 }
 
-.text-shadow {
-    text-shadow:$text-shadow;
-}
-
 // Animations
 
 .tab-pane {
     .combat-entry {
-        transition: top ease .375s;
-        transform: translate3d(0, 0, 0);
+        transition:top ease .375s;
+        transform:translate3d(0, 0, 0);
     
         .bar-graph {
-            transition: width ease .5s;
-            transform: translate3d(0, 0, 0);
+            transition:width ease .5s;
+            transform:translate3d(0, 0, 0);
         }
     }
 }
