- Pathing fix for Bootstrap

--- a/public/stylesheets/bootstrap/_variables.scss
+++ b/public/stylesheets/bootstrap/_variables.scss
@@ -27,8 +27,8 @@ $ffxiv-job-colors: (
     "THM": #a579d6, // Thamauturge
     "WAR": #cf2621, // Warrior
     "WHM": #fff0dc, // White Mage
-    "_pet": #64BDC8, // Chocobo/Pet
-    "_limit-break": #2599be, // Limit Break
+    "-pet": #64BDC8, // Chocobo/Pet
+    "-limit-break": #2599be, // Limit Break
 );
 
 $ffxiv-role-colors: (
