--- a/views/mustache/combat-entry-enchps.pug
+++ b/views/mustache/combat-entry-enchps.pug
@@ -9,12 +9,13 @@ script#mustache-combat-entry-enchps(type="x-tmpl-mustache")
         img.mr-1
         span.entrant-name.flex-grow-1 {{display_name}}
         span.d-inline-block.text-right
-            span.entrant-overhealing.text-negative-field.dynamic-field(
-                class = `{{^overhealing}}d-none{{/overhealing}}`,
-                data-sonsho={ key: 'overhealing' }) {{#format}}overhealing{{/format}}
-            span.entrant-total-overhealing-fraction.text-negative-field.dynamic-field.ml-1.mr-1(
-                class = `{{^fraction.overhealing}}d-none{{/fraction.overhealing}}`,
-                data-sonsho={ key: 'fraction.overhealing' }) {{#format}}fraction.overhealing{{/format}}
+            span.text-negative-field.mr-1
+                span.entrant-overhealing.dynamic-field(
+                    class = `{{^overhealing}}d-none{{/overhealing}}`,
+                    data-sonsho={ key: 'overhealing' }) {{#format}}overhealing{{/format}}
+                span.entrant-total-overhealing-fraction.dynamic-field.ml-1.mr-1(
+                    class = `{{^fraction.overhealing}}d-none{{/fraction.overhealing}}`,
+                    data-sonsho={ key: 'fraction.overhealing' }) {{#format}}fraction.overhealing{{/format}}
             //- span.entrant-shielding.text-shielding.dynamic-field.d-inline-block.mr-1(
                 class = `{{^shielding}}d-none{{/shielding}}`,
                 data-sonsho={ key: 'shielding'}) {{#format}}shielding{{/format}}
