--- a/views/mustache/combat-entry-enctps.pug
+++ b/views/mustache/combat-entry-enctps.pug
@@ -9,9 +9,9 @@ script#mustache-combat-entry-enctps(type="x-tmpl-mustache")
         img.mr-1
         span.entrant-name.flex-grow-1 {{display_name}}
         span.d-inline-block.text-right
-            span.text-negative-field.dynamic-field.mr-1(class = `{{^deaths}}d-none{{/deaths}}`)
+            span.text-negative-field.mr-1(class = `{{^deaths}}d-none{{/deaths}}`)
                 span.icon.mr-1 💀
-                span.entrant-deaths(data-sonsho={ key: 'deaths' }) {{#format}}deaths{{/format}}
+                span.entrant-deaths.dynamic-field(data-sonsho={ key: 'deaths' }) {{#format}}deaths{{/format}}
             span.entrant-damage-taken.d-inline-block(data-sonsho={ key: 'damage_taken' }) {{#format}}damage_taken{{/format}}
             span.entrant-tps.d-inline-block.font-weight-bold.ml-1(data-sonsho={ key: 'enctps' }) {{#format}}enctps{{/format}}
             span.entrant-total-damage-fraction.d-inline-block.ml-1(data-sonsho={ key: 'fraction.damage_taken' }) {{#format}}fraction.damage_taken{{/format}}
