--- a/views/mustache/combat-entry-enchps.pug
+++ b/views/mustache/combat-entry-enchps.pug
@@ -12,9 +12,8 @@ script#mustache-combat-entry-enchps(type="x-tmpl-mustache")
             span.text-negative-field.mr-1(class = `{{^overhealing}}d-none{{/overhealing}}`)
                 span.entrant-overhealing.dynamic-field(data-sonsho={ key: 'overhealing' }) {{#format}}overhealing{{/format}}
                 span.entrant-total-overhealing-fraction.dynamic-field.ml-1(data-sonsho={ key: 'fraction.overhealing' }) {{#format}}fraction.overhealing{{/format}}
-            span.entrant-shielding.text-shielding.dynamic-field.d-inline-block.mr-1(
-                class = `{{^shielding}}d-none{{/shielding}}`,
-                data-sonsho={ key: 'shielding'}) {{#format}}shielding{{/format}}
+            span.text-shielding.mr-1(class = `{{^shielding}}d-none{{/shielding}}`)
+                span.entrant-shielding.dynamic-field(data-sonsho={ key: 'shielding'}) {{#format}}shielding{{/format}}
             span.entrant-healing.d-inline-block(data-sonsho={ key: 'healing' }) {{#format}}healing{{/format}}
             span.entrant-hps.d-inline-block.font-weight-bold.ml-1(data-sonsho={ key: 'enchps' }) {{#format}}enchps{{/format}}
             span.entrant-total-healing-fraction.d-inline-block.ml-1(data-sonsho={ key: 'fraction.healing' }) {{#format}}fraction.healing{{/format}}
