- Updated for Reaper and Sage

--- a/public/stylesheets/bootstrap/_variables.scss
+++ b/public/stylesheets/bootstrap/_variables.scss
@@ -21,8 +21,10 @@ $ffxiv-job-colors: (
     "PGL": #d69c00, // Pugilist
     "RDM": #e87b7b, // Red Mage
     "ROG": #af1964, // Rogue
+    "RPR": #965a90, // Reaper
     "SAM": #e46d04, // Samurai
     "SCH": #8657ff, // Scholar
+    "SGE": #80a0f0, // Sage
     "SMN": #2d9b78, // Summoner
     "THM": #a579d6, // Thamauturge
     "WAR": #cf2621, // Warrior
