--- a/public/stylesheets/bootstrap/_variables.scss
+++ b/public/stylesheets/bootstrap/_variables.scss
@@ -30,7 +30,7 @@ $ffxiv-job-colors: (
     "WAR": #cf2621, // Warrior
     "WHM": #fff0dc, // White Mage
     "-pet": #64BDC8, // Chocobo/Pet
-    "LIMITBREAK": #2599be, // Limit Break
+    "LIMIT": #2599be, // Limit Break
 );
 
 $ffxiv-role-colors: (
